--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,8 +10,17 @@ body{
 }
 
 .timer {
-    //
+  circle{
+    stroke-width: 3;
+    stroke-dasharray: "565.48";
+    stroke: green;
+    fill: none;
+    //stroke-dashoffset: (2*50*3.14);
+    stroke-dashoffset: 50%;
+  }
 }
+
+
 
 p {
   font-size: 50px;
